Style changes - FIX: Wonky <Front> height on mobile is gone finally

--- a/src/components/front.module.css
+++ b/src/components/front.module.css
@@ -19,6 +19,9 @@
 }
 .frontImage {
   width: 100%;
+  height: 40rem;
+  position: absolute;
+  left: 0;
 }
 .titleText{
   font-family: Inconsolata;
@@ -89,7 +92,7 @@
   color: #7093d9;
 }
 @media (max-width: 1150px){
-  .frontContainer, .frontImage {
+  .front, .frontContainer, .frontImage {
     width: 100%;
     max-height: 100vh;
   }
