--- a/src/components/section.module.css
+++ b/src/components/section.module.css
@@ -1,7 +1,7 @@
 .section {
   box-sizing: border-box;
   padding-top: 3rem;
-  background-color: #e6e2f5;
+  background-color: #ebe9f2;
   border-top: 1px solid #4f4f4f;
 }
 .title {
